@@ -1,3 +1,10 @@
+2008-05-26  Martin Baulig  <martin@ximian.com>
+
+	* debug-mono-symfile.h
+	(MonoSymbolFileOffsetTable): Added `_is_aspx_source'.
+	(MonoSymbolFileSourceEntry): Reflect latest symbol file changes;
+	only keep `index' and `data_offset' here.
+
 2008-05-19  Martin Baulig  <martin@ximian.com>
 
 	* mono-debug.h (MONO_DEBUGGER_VERSION): Bump to 70.
